<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_tip_pane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.citadel.nmcanall.tipcalculator.TipPane"
    tools:showIn="@layout/activity_tip_pane">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/bill_amount_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enterBillTextView"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"
            android:paddingRight="@dimen/extra_space" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/billAmount"
            android:textSize="@dimen/text_size"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:text="@string/select_tip_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:id="@+id/selectTipTextView"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textSize="@dimen/text_size"
        android:orientation="horizontal" >

        <RadioButton
            android:text="10%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton10"
            android:layout_weight="1" />

        <RadioButton
            android:text="15%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton15"
            android:layout_weight="1" />

        <RadioButton
            android:text="18%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton18"
            android:layout_weight="1" />

        <RadioButton
            android:text="20%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton20"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/custom_radio_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonCustom"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tip_amount_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customTV"
            android:paddingRight="@dimen/extra_space"
            android:textSize="@dimen/text_size"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/customTipEditText"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"
            android:enabled="false" />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/tip_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tipTextView"
                android:paddingRight="@dimen/extra_space"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size" />

            <TextView
                android:text="$0.00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tipAmountTextView"
                android:textSize="@dimen/text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/total_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalTextView"
                android:textAlignment="textEnd"
                android:paddingRight="@dimen/extra_space"
                android:textSize="@dimen/text_size" />

            <TextView
                android:text="$0.00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalAmountTextView"
                android:textSize="@dimen/text_size" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/round_up_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/extra_space"
            android:textSize="@dimen/text_size"
            android:id="@+id/roundUpTextextView" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/extra_space"
            android:paddingLeft="@dimen/extra_space"
            android:id="@+id/roundUpTotalSwitch" />

    </LinearLayout>

</LinearLayout>
